--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
@@ -87,37 +88,54 @@
                 </p>
             </section>
             <!-- inicio recomendaciones -->
-            <section class="findings ">
-                <ul class="findings__list findings__grid" >
-                    <li id="rec1" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-                        <img src="./img/recomendacion-1.jpg" alt="recomendacion 1">
-                        <p>
-                            "Una firma de gran reputación en el mercado legal de Uruguay"
-                        </p>
-                        <p>
-                            - LATIN LAWYER
-                        </p>
-                    </li>
-                    <li id="rec2" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="800">
-                        <img src="./img/recomendacion-2.jpg" alt="recomendacion 2">
-                        <p>
-                            "Una opción popular entre las empresas internacionales que buscan hacer negocios en Uruguay"
-                        </p>
-                        <p>
-                            - LEGAL 500
-                        </p>
-                    </li>
-                    <li id="rec3" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
-                        <img src="./img/recomendacion-3.jpg" alt="recomendacion 3">
-                        <p>
-                            "La firma brinda asesoramiento con conocimiento específico de los aspectos comerciales y
-                            legales del negocio inmobiliario en Uruguay"
-                        </p>
-                        <p>
-                            - CHAMBERS & PARTNERS
-                        </p>
-                    </li>
-                </ul>
+            <section class="carrusel carrusel--height" data-aos="fade-up">
+                <div id="carouselExampleCaptions" class="carousel slide carrusel--height" data-bs-ride="false">
+                    <div class="carousel-indicators d-none d-md-flex ">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner carrusel--height">
+                        <div class="carousel-item active">
+                            <img src="./img/recomendacion-1.jpg" class="d-block carrusel--height" alt="recomendacion 1">
+                            <div class="carousel-caption">
+                                <h3 class="mb-md-5">"Una firma de gran reputación en el mercado legal de Uruguay"</h3>
+                                <p>- LATIN LAWYER</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./img/recomendacion-2.jpg" class="d-block carrusel--height" alt="Recomendacion 2">
+                            <div class="carousel-caption">
+                                <h3 class="mb-md-5">"Una opción popular entre las empresas internacionales que buscan
+                                    hacer negocios en Uruguay"</h3>
+                                <p>- LEGAL 500</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./img/recomendacion-3.jpg" class="d-block carrusel--height carrusel--heightB"
+                                alt="recomendacion 3">
+                            <div class="carousel-caption">
+                                <h3 class="mb-md-5">"La firma brinda asesoramiento con conocimiento específico de los
+                                    aspectos comerciales y
+                                    legales del negocio inmobiliario en Uruguay"</h3>
+                                <p>- CHAMBERS & PARTNERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </section>
             <!-- inicio reconocimientos internacionales -->
             <section class="recon" data-aos="fade-up">
