--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>Contacto | Brascesco & Larrosa</title>
 </head>
@@ -48,7 +48,7 @@
         <!-- header -->
         <header class="header header--margin header--ajust" id="header">
             <h1 class="header__title header__title--bottom header__title--left">¡Contáctanos!</h1>
-            <img class="header__photo" src="./img/header-contacto.jpg" alt="foto de nuestros abogados">
+            <img class="header__photo" id="contactHeader" src="./img/header-contacto.jpg" alt="foto de nuestros abogados">
         </header>
         <!-- fin header -->
         <!-- inicio contenido principal -->
