--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
                 <a class="navbar-brand nav__logo" href="./index.html">
                     <img src="./img/logo.jpg" alt="Logo de Brascesco y Larrosa">
                 </a>
-                <button class="navbar-toggler mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon nav__button"></span>
+                    <svg class="hamburguer" viewBox="0 0 100 80" width="40" height="40">
+                        <rect width="100" height="10"></rect>
+                        <rect y="30" width="100" height="10"></rect>
+                        <rect y="60" width="100" height="10"></rect>
+                    </svg>
                 </button>
                 <div class="collapse navbar-collapse nav__ul" id="navbarNav">
                     <ul class="navbar-nav">
