ajustes en el footer

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                 </p>
             </section>
             <!-- inicia section novedades -->
-            <section class="news">
+            <section class="news d-flex flex-column align-items-center">
                 <h2>Novedades:</h2>
-                <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="cards row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
                         <a href="#">
                             <div class="card h-100" data-aos="fade-up">
