correciones de los alt

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Aquí te contamos quiénes somos y lo asombrosamente reconocido que es nuestro estudio">
+    <meta name="description"
+        content="Aquí te contamos quiénes somos y lo asombrosamente reconocido que es nuestro estudio">
     <meta name="author" content="Santiago Larrosa">
     <meta name="robots" content="index">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
@@ -25,8 +27,9 @@
                 <a class="navbar-brand nav__logo" href="./index.html">
                     <img src="./img/logo.jpg" alt="Logo de Brascesco y Larrosa">
                 </a>
-                <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <svg class="hamburguer" viewBox="0 0 100 80" width="40" height="40">
                         <rect width="100" height="10"></rect>
                         <rect y="30" width="100" height="10"></rect>
@@ -55,7 +58,8 @@
         <!-- header -->
         <header class="header header--margin header--ajust" id="header">
             <h1 class="header__title header__title--bottom header__title--left">Quiénes somos</h1>
-            <img class="header__photo" src="./img/header-quienes-somos.jpg" alt="foto de nuestros abogados">
+            <img class="header__photo" src="./img/header-quienes-somos.jpg"
+                alt="Foto de nuestra abogada estrella en un juicio">
         </header>
         <!-- fin header -->
         <!-- inicio contenido principal -->
@@ -107,14 +111,16 @@
                     </div>
                     <div class="carousel-inner carrusel--height">
                         <div class="carousel-item active">
-                            <img src="./img/recomendacion-1.jpg" class="d-block carrusel--height" alt="recomendacion 1">
+                            <img src="./img/recomendacion-1.jpg" class="d-block carrusel--height"
+                                alt="Foto de una de las oficinas con computadoras">
                             <div class="carousel-caption">
                                 <h3 class="mb-md-5">"Una firma de gran reputación en el mercado legal de Uruguay"</h3>
                                 <p>- LATIN LAWYER</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./img/recomendacion-2.jpg" class="d-block carrusel--height" alt="Recomendacion 2">
+                            <img src="./img/recomendacion-2.jpg" class="d-block carrusel--height"
+                                alt="Foto desde dentro de la sucursal en punta del este">
                             <div class="carousel-caption">
                                 <h3 class="mb-md-5">"Una opción popular entre las empresas internacionales que buscan
                                     hacer negocios en Uruguay"</h3>
@@ -123,7 +129,7 @@
                         </div>
                         <div class="carousel-item">
                             <img src="./img/recomendacion-3.jpg" class="d-block carrusel--height carrusel--heightB"
-                                alt="recomendacion 3">
+                                alt="Foto de una abogada trabajando en una computadora">
                             <div class="carousel-caption">
                                 <h3 class="mb-md-5">"La firma brinda asesoramiento con conocimiento específico de los
                                     aspectos comerciales y
@@ -149,16 +155,16 @@
                 <h2 class="recon__title">Reconocimientos internacionales:</h2>
                 <ul class="recon__list">
                     <li>
-                        <img src="./img/reconocimiento-1.jpg" alt="reconocimiento 1">
+                        <img src="./img/reconocimiento-1.jpg" alt="estampa de reconocimiento de IQNet">
                     </li>
                     <li>
-                        <img src="./img/reconocimiento-2.jpg" alt="reconocimiento 2">
+                        <img src="./img/reconocimiento-2.jpg" alt="estampa de reconocimiento de Latin Directory">
                     </li>
                     <li>
-                        <img src="./img/reconocimiento-3.jpg" alt="reconocimiento 3">
+                        <img src="./img/reconocimiento-3.jpg" alt="estampa de reconocimiento de Chambers">
                     </li>
                     <li>
-                        <img src="./img/reconocimiento-4.jpg" alt="reconocimiento 4">
+                        <img src="./img/reconocimiento-4.jpg" alt="estampa de reconocimiento de The Legal 500">
                     </li>
                 </ul>
             </section>
