--- a/contacto.html
+++ b/contacto.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="En esta página puedes consultarnos lo que desees y aclarar tus dudas, ¡te responderemos en menos de 128 horas!">
+    <meta name="description"
+        content="En esta página puedes consultarnos lo que desees y aclarar tus dudas, ¡te responderemos en menos de 128 horas!">
     <meta name="author" content="Santiago Larrosa">
     <meta name="robots" content="index">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
@@ -25,8 +27,9 @@
                 <a class="navbar-brand nav__logo" href="./index.html">
                     <img src="./img/logo.jpg" alt="Logo de Brascesco y Larrosa">
                 </a>
-                <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <svg class="hamburguer" viewBox="0 0 100 80" width="40" height="40">
                         <rect width="100" height="10"></rect>
                         <rect y="30" width="100" height="10"></rect>
@@ -55,7 +58,8 @@
         <!-- header -->
         <header class="header header--margin header--ajust" id="header">
             <h1 class="header__title header__title--bottom header__title--left">¡Contáctanos!</h1>
-            <img class="header__photo" id="contactHeader" src="./img/header-contacto.jpg" alt="foto de nuestros abogados">
+            <img class="header__photo" id="contactHeader" src="./img/header-contacto.jpg"
+                alt="Foto de una chica con traje corriendo con un café en la mano">
         </header>
         <!-- fin header -->
         <!-- inicio contenido principal -->
