--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Somos el mejor y el más confiable estudio jurídico en todo Uruguay, nadie rivaliza a nuestros servicios">
+    <meta name="description"
+        content="Somos el mejor y el más confiable estudio jurídico en todo Uruguay, nadie rivaliza a nuestros servicios">
     <meta name="author" content="Santiago Larrosa">
     <meta name="robots" content="index">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
@@ -25,8 +27,9 @@
                 <a class="navbar-brand nav__logo" href="./index.html">
                     <img src="./img/logo.jpg" alt="Logo de Brascesco y Larrosa">
                 </a>
-                <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <svg class="hamburguer" viewBox="0 0 100 80" width="40" height="40">
                         <rect width="100" height="10"></rect>
                         <rect y="30" width="100" height="10"></rect>
@@ -84,7 +87,8 @@
                     <div class="col">
                         <a href="#">
                             <div class="card h-100" data-aos="fade-up">
-                                <img src="./img/novedad-1.jpg" class="card-img-top" alt="Novedad 1">
+                                <img src="./img/novedad-1.jpg" class="card-img-top"
+                                    alt="Foto de una oficina vacía con papeles tirados">
                                 <div class="card-body">
                                     <h3 class="card-title mb-5">"Yo no cometí ningún delito durante mi gestión" -
                                         Fernando Astra</h3>
@@ -100,7 +104,8 @@
                     <div class="col">
                         <a href="#">
                             <div class="card h-100" data-aos="fade-up">
-                                <img src="./img/novedad-2.jpg" class="card-img-top" alt="Novedad 2">
+                                <img src="./img/novedad-2.jpg" class="card-img-top"
+                                    alt="Foto de abogados reunidos en una sala de conferencias">
                                 <div class="card-body">
                                     <h3 class="card-title mb-5">Cheques sin fondo y compras irregulares en Punta del
                                         Este</h3>
@@ -117,7 +122,8 @@
                     <div class="col">
                         <a href="#">
                             <div class="card h-100" data-aos="fade-up">
-                                <img src="./img/novedad-3.jpg" class="card-img-top" alt="Novedad 3">
+                                <img src="./img/novedad-3.jpg" class="card-img-top"
+                                    alt="Foto del palacio legislativo desde fuera">
                                 <div class="card-body">
                                     <h3 class="card-title mb-5">Legisladores instalan grupo redactor del nuevo Código de
                                         Procedimientos Civiles, informa Ana Flores.</h3>
@@ -137,16 +143,16 @@
                 <h2 class="recon__title">Reconocimientos internacionales:</h2>
                 <ul class="recon__list">
                     <li>
-                        <img src="./img/reconocimiento-1.jpg" alt="reconocimiento 1">
+                        <img src="./img/reconocimiento-1.jpg" alt="estampa de reconocimiento de IQNet">
                     </li>
                     <li>
-                        <img src="./img/reconocimiento-2.jpg" alt="reconocimiento 2">
+                        <img src="./img/reconocimiento-2.jpg" alt="estampa de reconocimiento de Latin Directory">
                     </li>
                     <li>
-                        <img src="./img/reconocimiento-3.jpg" alt="reconocimiento 3">
+                        <img src="./img/reconocimiento-3.jpg" alt="estampa de reconocimiento de Chambers">
                     </li>
                     <li>
-                        <img src="./img/reconocimiento-4.jpg" alt="reconocimiento 4">
+                        <img src="./img/reconocimiento-4.jpg" alt="estampa de reconocimiento de The Legal 500">
                     </li>
                 </ul>
             </section>
