--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="¿Quieres unirte a nuestro espectacular y prestigioso estudio? Claro que sí, ¡comunicate con nosotros!">
+    <meta name="description"
+        content="¿Quieres unirte a nuestro espectacular y prestigioso estudio? Claro que sí, ¡comunicate con nosotros!">
     <meta name="author" content="Santiago Larrosa">
     <meta name="robots" content="index">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
@@ -25,8 +27,9 @@
                 <a class="navbar-brand nav__logo" href="./index.html">
                     <img src="./img/logo.jpg" alt="Logo de Brascesco y Larrosa">
                 </a>
-                <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <svg class="hamburguer" viewBox="0 0 100 80" width="40" height="40">
                         <rect width="100" height="10"></rect>
                         <rect y="30" width="100" height="10"></rect>
@@ -56,7 +59,7 @@
         <header class="header header--margin header--ajust" id="header">
             <h1 class="header__title header__title--bottom header__title--left">¡Trabaja con nosotros!</h1>
             <img class="header__photo header__foto--left" src="./img/header-trabaja-con-nosotros.jpg"
-                alt="foto de una persona siendo entrevistada">
+                alt="foto de una persona sonriendo siendo contratada">
         </header>
         <!-- fin header -->
         <!-- inicio contenido principal -->
