cambio de formato en imagenes y optimizacion de codigo

--- a/contacto.html
+++ b/contacto.html
@@ -58,7 +58,7 @@
         <!-- header -->
         <header class="header header--margin header--ajust" id="header">
             <h1 class="header__title header__title--bottom header__title--left">¡Contáctanos!</h1>
-            <img class="header__photo" id="contactHeader" src="./img/header-contacto.jpg"
+            <img class="header__photo" id="contactHeader" src="./img/header-contacto.webp"
                 alt="Foto de una chica con traje corriendo con un café en la mano">
         </header>
         <!-- fin header -->
