--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- header -->
         <header class="header" id="header">
             <h1 class="header__title">Brascesco & Larrosa | Estudio jurídico</h1>
-            <img class="header__photo" src="./img/header-index.jpg" alt="foto del estudio jurídico">
+            <img class="header__photo" src="./img/header-index.webp" alt="foto del estudio jurídico">
         </header>
         <!-- fin header -->
         <!-- inicia contenido principal -->
