--- a/que-hacemos.html
+++ b/que-hacemos.html
@@ -58,7 +58,7 @@
         <!-- header -->
         <header class="header header--margin header--ajust" id="header">
             <h1 class="header__title header__title--bottom header__title--left">Qué hacemos</h1>
-            <img class="header__photo" src="./img/header-que-hacemos.jpg" alt="foto de un hombre con traje">
+            <img class="header__photo" src="./img/header-que-hacemos.webp" alt="foto de un hombre con traje">
         </header>
         <!-- fin header -->
         <!-- inicio contenido principal -->
@@ -95,12 +95,10 @@
                     nostrum. accusamus cumque aspernatur! libero reiciendis debitis magni commodi itaque magnam nostrum.
                     Numquam eum accusantium expedita. Eos inventore molestiae amet voluptatibus perferendis.
                 </p>
-                <div class="quality__flex">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ipsam, impedit quisquam eveniet
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ipsam, impedit quisquam eveniet
                         temporibus iure voluptatibus aperiam quod quidem? Temporibus, distinctio. Quod at corrupti odio
                         vel, voluptatibus natus harum quidem?
-                    </p>
-                </div>
+                </p>
             </section>
         </main>
         <!-- fin contenido principal -->
