--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -58,7 +58,7 @@
         <!-- header -->
         <header class="header header--margin header--ajust" id="header">
             <h1 class="header__title header__title--bottom header__title--left">Quiénes somos</h1>
-            <img class="header__photo" src="./img/header-quienes-somos.jpg"
+            <img class="header__photo" src="./img/header-quienes-somos.webp"
                 alt="Foto de nuestra abogada estrella en un juicio">
         </header>
         <!-- fin header -->
