--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -58,7 +58,7 @@
         <!-- header -->
         <header class="header header--margin header--ajust" id="header">
             <h1 class="header__title header__title--bottom header__title--left">¡Trabaja con nosotros!</h1>
-            <img class="header__photo header__foto--left" src="./img/header-trabaja-con-nosotros.jpg"
+            <img class="header__photo header__foto--left" src="./img/header-trabaja-con-nosotros.webp"
                 alt="foto de una persona sonriendo siendo contratada">
         </header>
         <!-- fin header -->
