--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -110,7 +110,7 @@
                             aria-label="Slide 3"></button>
                     </div>
                     <div class="carousel-inner carrusel--height">
-                        <div class="carousel-item active">
+                        <div class="carousel-item active carrusel--overflow">
                             <img src="./img/recomendacion-1.jpg" class="d-block carrusel--height"
                                 alt="Foto de una de las oficinas con computadoras">
                             <div class="carousel-caption">
@@ -118,7 +118,7 @@
                                 <p>- LATIN LAWYER</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item carrusel--overflow">
                             <img src="./img/recomendacion-2.jpg" class="d-block carrusel--height"
                                 alt="Foto desde dentro de la sucursal en punta del este">
                             <div class="carousel-caption">
@@ -127,8 +127,8 @@
                                 <p>- LEGAL 500</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="./img/recomendacion-3.jpg" class="d-block carrusel--height carrusel--heightB"
+                        <div class="carousel-item carrusel--overflow">
+                            <img src="./img/recomendacion-3.jpg" class="d-block carrusel--height"
                                 alt="Foto de una abogada trabajando en una computadora">
                             <div class="carousel-caption">
                                 <h3 class="mb-md-5">"La firma brinda asesoramiento con conocimiento específico de los
