--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Somos el mejor y el más confiable estudio jurídico en todo Uruguay, nadie rivaliza a nuestros servicios">
+    <meta name="description"
+        content="Somos el mejor y el más confiable estudio jurídico en todo Uruguay, nadie rivaliza a nuestros servicios">
     <meta name="author" content="Santiago Larrosa">
     <meta name="robots" content="index">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
@@ -166,74 +168,52 @@
         <!-- inicia footer -->
         <footer class="footer" id="footer">
             <div class="footer__container">
-                <a class="footer__logo" href="./index.html">
-                    <img src="./img/logo-inferior.jpg" alt="logo de brascesco & larrosa">
-                </a>
-                <div class="footer__social">
-                    <h3>Síguenos en:</h3>
-                    <a href="https://www.instagram.com/brascescoylarrosa" target="_blank">
-                        <img src="./img/instagram.png" alt="icono de instagram">
-                    </a>
-                    <a href="https://www.facebook.com/profile.php?id=100084765421718" target="_blank">
-                        <img src="./img/facebook.png" alt="icono de facebook">
-                    </a>
-                    <a href="https://twitter.com/BrascescoL" target="_blank">
-                        <img src="./img/twitter.png" alt="icono de twitter">
-                    </a>
-                    <a href="#" target="_blank">
-                        <img src="./img/whatsapp.png" alt="icono de whatsapp">
-                    </a>
+                <div class="logoBx">
+                    <a href="./index.html"><img src="./img/logo-inferior.jpg" alt="Logo de Brascesco y Larrosa"></a>
                 </div>
-                <ul class="footer__addresses">
-                    <li class="footer__list">
-                        <img src="./img/icono-direccion.png" alt="icono de direccion">
-                        <h3>Montevideo</h3>
-                        <div class="addresses__info">
-                            <p>
-                                Juan José de Amézaga 2049
-                            </p>
-                            <p>
-                                Montevideo, Uruguay
-                            </p>
-                            <p>
-                                Tel: 2205 1955
-                            </p>
-                        </div>
-                    </li>
-                    <li class="footer__list">
-                        <img src="./img/icono-direccion.png" alt="icono de direccion">
-                        <h3>Punta del Este</h3>
-                        <div class="addresses__info" id="maldonado">
-                            <p>
-                                Roberto Chiroque 4785
-                            </p>
-                            <p>
-                                Maldonado, Uruguay
-                            </p>
-                            <p>
-                                Tel: 4545 1127
-                            </p>
-                        </div>
-                    </li>
-                    <li class="footer__list">
-                        <img src="./img/icono-direccion.png" alt="icono de direccion">
-                        <h3>La Paloma</h3>
-                        <div class="addresses__info" id="la-paloma">
-                            <p>
-                                Leviatan 3245
-                            </p>
-                            <p>
-                                Rocha, Uruguay
-                            </p>
-                            <p>
-                                Tel: 1245 7781
-                            </p>
-                        </div>
-                    </li>
-                </ul>
+                <div class="socialBx">
+                    <h3>Síguenos en:</h3>
+                    <ul>
+                        <li><img src="./img/facebook.png" alt="logo de facebook"></li>
+                        <li><img src="./img/instagram.png" alt="logo de instragram"></li>
+                        <li><img src="./img/twitter.png" alt="logo de twitter"></li>
+                        <li><img src="./img/whatsapp.png" alt="logo de whatsapp"></li>
+                    </ul>
+                </div>
+                <div class="locations">
+                    <ul>
+                        <li>
+                            <img src="./img/icono-direccion.png" alt="icono con forma de pin para mapas">
+                            <h3>Montevideo</h3>
+                            <ul>
+                                <li>J. José de Amézaga 5049</li>
+                                <li>Montevideo, Uruguay</li>
+                                <li>Tel: 4545 1525</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <img src="./img/icono-direccion.png" alt="icono con forma de pin para mapas">
+                            <h3>Punta del Este</h3>
+                            <ul>
+                                <li>Roberto Chiroque 4478</li>
+                                <li>Maldonado, Uruguay</li>
+                                <li>Tel: 5455 1525</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <img src="./img/icono-direccion.png" alt="icono con forma de pin para mapas">
+                            <h3>La Paloma</h3>
+                            <ul>
+                                <li>Leviatan 4578</li>
+                                <li>Rocha, Uruguay</li>
+                                <li>Tel: 3545 7535</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <!-- Disclaimers -->
-            <p class="footer__copyR">
+            <p class="copyR">
                 &copy; 2022 Todos los derechos reservados.
             </p>
             <!-- fin Disclaimers -->
