hover en footer

--- a/contacto.html
+++ b/contacto.html
@@ -130,10 +130,18 @@
                 <div class="socialBx">
                     <h3>Síguenos en:</h3>
                     <ul>
-                        <li><img src="./img/facebook.png" alt="logo de facebook"></li>
-                        <li><img src="./img/instagram.png" alt="logo de instragram"></li>
-                        <li><img src="./img/twitter.png" alt="logo de twitter"></li>
-                        <li><img src="./img/whatsapp.png" alt="logo de whatsapp"></li>
+                        <a href="https://www.facebook.com/people/Brascesco-Larrosa/100084765421718" target="_blank">
+                            <li><img src="./img/facebook.png" alt="logo de facebook"></li>
+                        </a>
+                        <a href="https://www.instagram.com/brascescoylarrosa" target="_blank">
+                            <li><img src="./img/instagram.png" alt="logo de instragram"></li>
+                        </a>
+                        <a href="#" target="_blank">
+                            <li><img src="./img/twitter.png" alt="logo de twitter"></li>
+                        </a>
+                        <a href="#" target="_blank">
+                            <li><img src="./img/whatsapp.png" alt="logo de whatsapp"></li>
+                        </a>
                     </ul>
                 </div>
                 <div class="locations">
