--- a/que-hacemos.html
+++ b/que-hacemos.html
@@ -94,8 +94,8 @@
                     Numquam eum accusantium expedita. Eos inventore molestiae amet voluptatibus perferendis.
                 </p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ipsam, impedit quisquam eveniet
-                        temporibus iure voluptatibus aperiam quod quidem? Temporibus, distinctio. Quod at corrupti odio
-                        vel, voluptatibus natus harum quidem?
+                    temporibus iure voluptatibus aperiam quod quidem? Temporibus, distinctio. Quod at corrupti odio
+                    vel, voluptatibus natus harum quidem?
                 </p>
             </section>
         </main>
@@ -109,10 +109,18 @@
                 <div class="socialBx">
                     <h3>Síguenos en:</h3>
                     <ul>
-                        <li><img src="./img/facebook.png" alt="logo de facebook"></li>
-                        <li><img src="./img/instagram.png" alt="logo de instragram"></li>
-                        <li><img src="./img/twitter.png" alt="logo de twitter"></li>
-                        <li><img src="./img/whatsapp.png" alt="logo de whatsapp"></li>
+                        <a href="https://www.facebook.com/people/Brascesco-Larrosa/100084765421718" target="_blank">
+                            <li><img src="./img/facebook.png" alt="logo de facebook"></li>
+                        </a>
+                        <a href="https://www.instagram.com/brascescoylarrosa" target="_blank">
+                            <li><img src="./img/instagram.png" alt="logo de instragram"></li>
+                        </a>
+                        <a href="#" target="_blank">
+                            <li><img src="./img/twitter.png" alt="logo de twitter"></li>
+                        </a>
+                        <a href="#" target="_blank">
+                            <li><img src="./img/whatsapp.png" alt="logo de whatsapp"></li>
+                        </a>
                     </ul>
                 </div>
                 <div class="locations">
