optimizacion de imagenes

--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
         <nav class="nav navbar navbar-expand-lg" id="nav">
             <div class="container-fluid">
                 <a class="navbar-brand nav__logo" href="./index.html">
-                    <img src="./img/logo.jpg" alt="Logo de Brascesco y Larrosa">
+                    <img src="./img/logo.webp" alt="Logo de Brascesco y Larrosa">
                 </a>
                 <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -66,7 +66,7 @@
             <section>
                 <ul class="branch">
                     <li data-aos="fade-up" data-aos-duration="500">
-                        <img src="./img/sucursal-montevideo.jpg" alt="foto de la sucursal en Montevideo">
+                        <img src="./img/sucursal-montevideo.webp" alt="foto de la sucursal en Montevideo">
                         <h3>Montevideo</h3>
                         <p>
                             Juan José de Amézaga 2049
@@ -80,7 +80,7 @@
                         <p>mail@brascescoylarrosa.com.uy</p>
                     </li>
                     <li data-aos="fade-up" data-aos-duration="1000">
-                        <img src="./img/sucursal-punta-del-este.jpg" alt="foto de la sucursal en Punta del Este">
+                        <img src="./img/sucursal-punta-del-este.webp" alt="foto de la sucursal en Punta del Este">
                         <h3>Punta del Este</h3>
                         <p>
                             Roberto Chiroque 4785
@@ -94,7 +94,7 @@
                         <p>puntadeleste@brascescoylarrosa.com.uy</p>
                     </li>
                     <li data-aos="fade-up" data-aos-duration="1500">
-                        <img src="./img/sucursal-la-paloma.jpg" alt="foto de la sucursal en Rocha">
+                        <img src="./img/sucursal-la-paloma.webp" alt="foto de la sucursal en Rocha">
                         <h3>La Paloma</h3>
                         <p>
                             Leviatan 3245
@@ -125,7 +125,7 @@
         <footer class="footer" id="footer">
             <div class="footer__container">
                 <div class="logoBx">
-                    <a href="./index.html"><img src="./img/logo-inferior.jpg" alt="Logo de Brascesco y Larrosa"></a>
+                    <a href="./index.html"><img src="./img/logo-inferior.webp" alt="Logo de Brascesco y Larrosa"></a>
                 </div>
                 <div class="socialBx">
                     <h3>Síguenos en:</h3>
