--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="nav navbar navbar-expand-lg" id="nav">
             <div class="container-fluid">
                 <a class="navbar-brand nav__logo" href="./index.html">
-                    <img src="./img/logo.jpg" alt="Logo de Brascesco y Larrosa">
+                    <img src="./img/logo.webp" alt="Logo de Brascesco y Larrosa">
                 </a>
                 <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -85,7 +85,7 @@
                     <div class="col">
                         <a href="#">
                             <div class="card h-100" data-aos="fade-up">
-                                <img src="./img/novedad-1.jpg" class="card-img-top"
+                                <img src="./img/novedad-1.webp" class="card-img-top"
                                     alt="Foto de una oficina vacía con papeles tirados">
                                 <div class="card-body">
                                     <h3 class="card-title mb-5">"Yo no cometí ningún delito durante mi gestión" -
@@ -102,7 +102,7 @@
                     <div class="col">
                         <a href="#">
                             <div class="card h-100" data-aos="fade-up">
-                                <img src="./img/novedad-2.jpg" class="card-img-top"
+                                <img src="./img/novedad-2.webp" class="card-img-top"
                                     alt="Foto de abogados reunidos en una sala de conferencias">
                                 <div class="card-body">
                                     <h3 class="card-title mb-5">Cheques sin fondo y compras irregulares en Punta del
@@ -120,7 +120,7 @@
                     <div class="col">
                         <a href="#">
                             <div class="card h-100" data-aos="fade-up">
-                                <img src="./img/novedad-3.jpg" class="card-img-top"
+                                <img src="./img/novedad-3.webp" class="card-img-top"
                                     alt="Foto del palacio legislativo desde fuera">
                                 <div class="card-body">
                                     <h3 class="card-title mb-5">Legisladores instalan grupo redactor del nuevo Código de
@@ -141,16 +141,16 @@
                 <h2 class="recon__title">Reconocimientos internacionales:</h2>
                 <ul class="recon__list">
                     <li>
-                        <img src="./img/reconocimiento-1.jpg" alt="estampa de reconocimiento de IQNet">
+                        <img src="./img/reconocimiento-1.webp" alt="estampa de reconocimiento de IQNet">
                     </li>
                     <li>
-                        <img src="./img/reconocimiento-2.jpg" alt="estampa de reconocimiento de Latin Directory">
+                        <img src="./img/reconocimiento-2.webp" alt="estampa de reconocimiento de Latin Directory">
                     </li>
                     <li>
-                        <img src="./img/reconocimiento-3.jpg" alt="estampa de reconocimiento de Chambers">
+                        <img src="./img/reconocimiento-3.webp" alt="estampa de reconocimiento de Chambers">
                     </li>
                     <li>
-                        <img src="./img/reconocimiento-4.jpg" alt="estampa de reconocimiento de The Legal 500">
+                        <img src="./img/reconocimiento-4.webp" alt="estampa de reconocimiento de The Legal 500">
                     </li>
                 </ul>
             </section>
@@ -167,7 +167,7 @@
         <footer class="footer" id="footer">
             <div class="footer__container">
                 <div class="logoBx">
-                    <a href="./index.html"><img src="./img/logo-inferior.jpg" alt="Logo de Brascesco y Larrosa"></a>
+                    <a href="./index.html"><img src="./img/logo-inferior.webp" alt="Logo de Brascesco y Larrosa"></a>
                 </div>
                 <div class="socialBx">
                     <h3>Síguenos en:</h3>
