--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -23,7 +23,7 @@
         <nav class="nav navbar navbar-expand-lg" id="nav">
             <div class="container-fluid">
                 <a class="navbar-brand nav__logo" href="./index.html">
-                    <img src="./img/logo.jpg" alt="Logo de Brascesco y Larrosa">
+                    <img src="./img/logo.webp" alt="Logo de Brascesco y Larrosa">
                 </a>
                 <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -109,7 +109,7 @@
                     </div>
                     <div class="carousel-inner carrusel--height">
                         <div class="carousel-item active carrusel--overflow">
-                            <img src="./img/recomendacion-1.jpg" class="d-block carrusel--height"
+                            <img src="./img/recomendacion-1.webp" class="d-block carrusel--height"
                                 alt="Foto de una de las oficinas con computadoras">
                             <div class="carousel-caption">
                                 <h3 class="mb-md-5">"Una firma de gran reputación en el mercado legal de Uruguay"</h3>
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                         <div class="carousel-item carrusel--overflow">
-                            <img src="./img/recomendacion-2.jpg" class="d-block carrusel--height"
+                            <img src="./img/recomendacion-2.webp" class="d-block carrusel--height"
                                 alt="Foto desde dentro de la sucursal en punta del este">
                             <div class="carousel-caption">
                                 <h3 class="mb-md-5">"Una opción popular entre las empresas internacionales que buscan
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                         <div class="carousel-item carrusel--overflow">
-                            <img src="./img/recomendacion-3.jpg" class="d-block carrusel--height"
+                            <img src="./img/recomendacion-3.webp" class="d-block carrusel--height"
                                 alt="Foto de una abogada trabajando en una computadora">
                             <div class="carousel-caption">
                                 <h3 class="mb-md-5">"La firma brinda asesoramiento con conocimiento específico de los
@@ -153,16 +153,16 @@
                 <h2 class="recon__title">Reconocimientos internacionales:</h2>
                 <ul class="recon__list">
                     <li>
-                        <img src="./img/reconocimiento-1.jpg" alt="estampa de reconocimiento de IQNet">
+                        <img src="./img/reconocimiento-1.webp" alt="estampa de reconocimiento de IQNet">
                     </li>
                     <li>
-                        <img src="./img/reconocimiento-2.jpg" alt="estampa de reconocimiento de Latin Directory">
+                        <img src="./img/reconocimiento-2.webp" alt="estampa de reconocimiento de Latin Directory">
                     </li>
                     <li>
-                        <img src="./img/reconocimiento-3.jpg" alt="estampa de reconocimiento de Chambers">
+                        <img src="./img/reconocimiento-3.webp" alt="estampa de reconocimiento de Chambers">
                     </li>
                     <li>
-                        <img src="./img/reconocimiento-4.jpg" alt="estampa de reconocimiento de The Legal 500">
+                        <img src="./img/reconocimiento-4.webp" alt="estampa de reconocimiento de The Legal 500">
                     </li>
                 </ul>
             </section>
@@ -172,7 +172,7 @@
         <footer class="footer" id="footer">
             <div class="footer__container">
                 <div class="logoBx">
-                    <a href="./index.html"><img src="./img/logo-inferior.jpg" alt="Logo de Brascesco y Larrosa"></a>
+                    <a href="./index.html"><img src="./img/logo-inferior.webp" alt="Logo de Brascesco y Larrosa"></a>
                 </div>
                 <div class="socialBx">
                     <h3>Síguenos en:</h3>
