--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -23,7 +23,7 @@
         <nav class="nav navbar navbar-expand-lg" id="nav">
             <div class="container-fluid">
                 <a class="navbar-brand nav__logo" href="./index.html">
-                    <img src="./img/logo.jpg" alt="Logo de Brascesco y Larrosa">
+                    <img src="./img/logo.webp" alt="Logo de Brascesco y Larrosa">
                 </a>
                 <button class="button d-lg-none mb-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -116,7 +116,7 @@
         <footer class="footer" id="footer">
             <div class="footer__container">
                 <div class="logoBx">
-                    <a href="./index.html"><img src="./img/logo-inferior.jpg" alt="Logo de Brascesco y Larrosa"></a>
+                    <a href="./index.html"><img src="./img/logo-inferior.webp" alt="Logo de Brascesco y Larrosa"></a>
                 </div>
                 <div class="socialBx">
                     <h3>Síguenos en:</h3>
